src/v2/v2.css
/* ... */
:is(a, button, .link, .check, summary).hover:hover, ul.row.hover li:is(:hover, :has(:hover)):has(>a), .pop:hover>a.hover, table.hover tbody tr:hover>*, .tabs.hover>:is(a,label):hover {box-shadow:var(--shade-hover);}

/* colors */
[class].text {color:var(--text);}
[class].back, .stick {background-color:var(--bg);}
blockquote, pre, code {background-color:var(--bgl);}

/* status */
.nn, .ii, .yy, .ww, .ee, .tag, mark {--lt:calc(var(--lit) + var(--dlit, 0%));--satur:var(--rsatur);}
.nn, [data-hint]:after {--hue:var(--nn);--satur:0%;--dlit:15%;}
.ii {--hue:var(--ii);--dlit:-3%;}
.yy {--hue:var(--yy);--dlit:-12%;}
.ww {--hue:var(--ww);}
.ee {--hue:var(--ee);--dlit:-5%;}
[data-hint]:after {--lt:40%;}
.tx[class] {color:hsl(var(--hue) var(--satur) calc(var(--lt) - 5%));}
.ic[class]:before {color:hsl(var(--hue) var(--satur) var(--lt));}
.bg[class] {background-color:hsl(var(--hue) var(--satur) var(--lit-bg));}
.bt[class] {background-color:hsl(var(--hue) var(--satur) var(--lit) / var(--alpha-bg));}
.bk[class], [data-hint]:after {background-color:hsl(var(--hue) var(--satur) var(--lt, var(--lit)));color:var(--bg);}
.bk[class] a {color:var(--bg);}
mark {background-color:hsl(var(--ww) var(--satur) /*var(--lit-bg)*/ 85%);}
:is(button, [type="submit"]):not(.tx, .bg, .bk, .bt, .back, .fit) {background-color:var(--link);color:var(--bg);}
.tag:not(.tx, .bg, .bk, .bt, .back, .fit) {background-color:hsl(var(--ee) var(--rsatur) var(--lit));color:var(--bg);}

/* row */
.row {--flow:row nowrap;--wid:auto;--push:auto;display:flex;flex-flow:var(--flow);width:var(--wid);}
.row.wrap, ul.row, .tabs {--flow:row wrap;}
.row.vert {--flow:column nowrap;--push:0;}
ul.row.vert {--wid:var(--min-pop-w);}
.row.gap, [class*="grid-"].gap {gap:var(--gap);}
  .row:not(ul).mid {align-items:center;}
  .row>.mid, ul.row>li>.mid:not(ul) {align-self:center;}
.col-1, .stretch>* {flex:1;}
.col-0 {flex:initial;}
.col-2 {flex:2;}
.col-3 {flex:3;}
:is(.row, [class*="grid-"])>*>img:only-child {width:100%;height:100%;aspect-ratio:3/2;}

/* grid */
[class*="grid-"] {--cell-width:16rem;display:grid;grid-template-columns:repeat(auto-fill, minmax(min(100%, var(--cell-width)), 1fr));}
.grid-xs {--cell-width:8rem;}
.grid-s {--cell-width:12rem;}
.grid-l {--cell-width:24rem;}
.span-2 {grid-column-end:span 2;}
.span-3 {grid-column-end:span 3;}
.span-4 {grid-column-end:span 4;}

/* form as grid */
.form {--cols:minmax(min(40%, 8rem), 1fr) 3fr;--line:2;--label-align:right;--form-gap:var(--pad);--form-mar:calc((2 - var(--line)) * var(--gap-s));--col-full:1/calc(1 + var(--line));--pad-fset:calc((2 - var(--line)) * var(--gap));}
.form {display:grid;justify-items:start;align-items:first baseline;grid-template-columns:var(--cols);gap:var(--form-gap);}
.form>:not([name], :has([name])) {justify-self:var(--label-align);}
.form>:is([name], :has([name])) {grid-column-start:var(--line);}
.form>:is([name], :has([name])) + * {margin-top:var(--form-mar);}
.form[class] fieldset, .form .wide {grid-column:var(--col-full);justify-self:stretch;}
.form[class] fieldset {padding:var(--gap-s) var(--pad-fset);}
.form legend {margin-left:calc(var(--gap) - var(--pad-fset) - .3em);}
/* responsive form */
.form.vert {--cols:1fr;--line:1;--label-align:left;--form-gap:0;}


/* toggle */
.target:not(:target):not(:has(:target)), .check:not(:has(:checked)) + :not(:target):not(:has(:target)), .check input {display:none;}
/*.target, .tabs+div :target, .tabs :target, :is(h1,h2,h3):target {scroll-margin-top:5rem;}*/
html {scroll-padding-top:5rem;/*scroll-behavior:smooth;*/}
/* overlay - todo: simplify */
.overlay, #overlay {cursor:default;display:none;border:none;}
:is(
  .target:target,
  .target:has(:target),
  form:has(:not(.check)>[type="radio"]:checked) .modal.confirm
) + .overlay, 
body:has(.target.modal:target, .target.modal :target, .drawer:target, .drawer :target) #overlay,
body:has(.target.modal:target, .target.modal :target, .drawer:target, .drawer :target):not(:has(#overlay)):before
  {content:'';display:block;position:fixed;inset:-5em;background:var(--over);}
.overlay {z-index:101;}
#overlay, body:before {z-index:100;}
body:has(.modal.full:target, .modal.full :target) {overflow:hidden;}

/* modal */
.modal {position:fixed;z-index:130;overflow:auto;}
  .modal:not(.full) {min-height:10rem;max-height:90dvh;min-width:18rem;max-width:90vw;inset:50% auto auto 50%;transform:translate(-50%,-50%);}
  .modal.full {inset:0;/*calc(5 * var(--gap));*/}
a:has(img:target), ul.row li {-webkit-tap-highlight-color:transparent;}
img:target {position:absolute;display:block;inset:0;width:100%;height:100%;object-fit:contain;}

/* drawer */
.drawer {position:fixed;inset:0 auto 0 -21em;width:min(20em, 80%);z-index:120;transition:left .2s, right .2s;overflow:auto;}
.drawer:target {left:0;}
.drawer.shift {inset:0 -21em 0 auto;}
.drawer.shift:target {right:0;}

/* pop, drop, hint */
.pop, ul.row li, [data-hint] {position:relative;/*z-index:20;*/}
.pop>:last-child, /*[data-hint]:after,*/ ul.row ul, .modal, .drawer {border:none;background-color:var(--bg);box-shadow:var(--shade);}
.pop {display:inline-block;}
  /* for variable items height */
  ul.row.mid:not(.vert) li {display:flex;align-items:center;}
  /* subnav arrow */
  ul.row li:has(ul)>a {padding-right:calc(1.5 * var(--gap));}
  ul.row li:has(ul)>a:after {content:'\a0\a0\203a';color:var(--text);opacity:.5;position:absolute;right:.5em;top:50%;transform:translateY(-60%);}
  /**/
.pop:not(:hover, :has(>:first-child.check), [open]) > :last-child, ul.row li:not(:hover)>ul {display:none;}
  [data-hint]:hover:after {content:attr(data-hint);/*user-select:auto;*/}
.pop>:last-child, ul.row ul, [data-hint]:after {position:absolute;inset:var(--pos);transform:var(--mov);z-index:50;}
.pop>:last-child, ul.row ul {min-width:var(--min-pop-w);}
  .pop>:last-child:not(:has(.pop)), ul.row ul:not(:has(ul)) {max-height:var(--max-pop-h);overflow:auto;}
ul, ul.vert>li>ul {--pos:0 auto auto 100%;}
.pop:last-child, .row>li>ul {--pos:100% auto auto 0;}
/* ... */

